--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h2>Shamim Vaiya</h2>
     <h1>Hablu Vaiya</h1>
-    <h2>Ertugrul Ghazigi</h2>
+    <h2>Ertugrul Ghazi</h2>
+    <h1>Usman Ghazi</h1>
 </body>
 </html>
