--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Shamim Vaiya</h2>
-    <h1>Hablu Vaiya</h1>
-    <h2>Ertugrul Ghazi</h2>
-    <h1>Usman Ghazi</h1>
+    <h2>Shafiqul Islam</h2>
+    <h1>Shafiqul Islam</h1>
+    <h2>Shafiqul Islam</h2>
+    <h1>Shafiqul Islam</h1>
 </body>
 </html>
